$Id$

2008-05-03 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c: Added --pcapsavefile (-W) option to allow received
	  ARP responses to be saved in the specified pcap savefile for
	  later analysis.

	* TODO: Removed plan to support libpcap 0.7 as just about every
	  system has at least libpcap 0.8, and most have 0.9.

2007-12-10 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c: Change most calls to strtol() to use the new
          wrapper function Strtol() instead, because this checks for
          errors.  Previously, a non-numeric value would be converted to
          zero without any error, meaning something like "--snap=xxx"
          would be silently accepted.  Now such invalid inputs results in
          an error.

	* arp-scan.c: Added new --vlan (-Q) option to support sending
	  ARP packets with an 802.1Q VLAN tag.  Response packets with
	  an 802.1Q tag are decoded and displayed irrespective of this
	  option.

2007-04-17 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.h: Reduced MAX_FRAME from 65536 to 2048 bytes.

	* arp-scan.c: Add the optional padding in marshal_arp_pkt(), and
	  avoid potential buffer overflow if padding is longer than the
	  remaining buffer size.

	* arp-scan.c: Changed display_packet() to take ARP structure, extra
	  data and framing type as parmaters passed from callback() to avoid
	  having to call unmarshal_arp_pkt() twice.  This also means that
	  we don't need to pass the raw frame to display_packet() now as it
	  has the data in individual variables.

	* arp-scan.c: Move padding addition to marshal_arp_pkt().

2007-04-14 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.h, arp-scan.c: Changed MAXIP to MAX_FRAME and changed value
	  to 65536 bytes.  This is the maximum allowable frame size, which is
	  used to size read/write buffers.  This is much larger than any
	  layer-2 frame.

	* arp-scan.h: Changed PACKET_OVERHEAD to 18 (6+6+2 ... +4) and
	  MINIMUM_FRAME_SIZE to 46.
