@@ -33,3 +33,9 @@ from OpenBSD.
 
 Use pcap_get_selectable_fd() to get the file descriptor for select().  This
 function is not supported on windows.
+
+Investigate response packets >60 bytes long, e.g:
+10:27:40.710842 00:11:43:0f:f2:dd > 00:c0:9f:09:b8:db, ethertype ARP (0x0806), length 106: arp reply server4.nta-monitor.ad.nta-monitor.com is-at 00:11:43:0f:f2:dd
+10:27:40.802358 00:06:d7:55:0f:40 > 00:c0:9f:09:b8:db, ethertype ARP (0x0806), length 64: arp reply maple.nta-monitor.com is-at 00:06:d7:55:0f:40
+
+Review verbose levels, and what gets displayed.
