@@ -215,10 +215,9 @@ void recvfrom_wto(int, unsigned char *, int, struct sockaddr *, int);
 void remove_host(host_entry **);
 void timeval_diff(const struct timeval *, const struct timeval *,
                   struct timeval *);
-host_entry *find_host(host_entry **, struct in_addr *,
-                      const unsigned char *, int);
-void display_packet(host_entry *, struct in_addr *, arp_ether_ipv4 *,
-                    const unsigned char *, size_t, int, int);
+host_entry *find_host(host_entry **, struct in_addr *);
+void display_packet(host_entry *, arp_ether_ipv4 *, const unsigned char *,
+                    size_t, int, int, ether_hdr *);
 void advance_cursor(void);
 void dump_list(void);
 void print_times(void);
